migrate to JUnit5, remove warnings